k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shitmarket
  labels:
    app: shitmarket
    environment: production
---
